@@ -1,5 +1,10 @@
 # Time-stamp: "2003-09-15 01:01:36 ADT"
 
+NEXT
+
+    [DOCUMENTATION]
+    * Updated docs from Terrence Brannon.
+
 2005-11-09   Andy Lester
 
    Release 3.19_01 -- No new functionality.  New tests, though!
